client info caching and forwarding