@@ -7,6 +7,7 @@ import com.zenith.cache.data.chat.ChatCache;
 import com.zenith.cache.data.chunk.ChunkCache;
 import com.zenith.cache.data.config.ConfigurationCache;
 import com.zenith.cache.data.entity.EntityCache;
+import com.zenith.cache.data.info.ClientInfoCache;
 import com.zenith.cache.data.map.MapDataCache;
 import com.zenith.cache.data.mcpl.CachedChunkSectionCountProvider;
 import com.zenith.cache.data.recipe.RecipeCache;
@@ -17,8 +18,8 @@ import com.zenith.cache.data.team.TeamCache;
 import com.zenith.network.server.ServerSession;
 import lombok.Getter;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 import static com.zenith.Globals.CACHE_LOG;
 import static com.zenith.Globals.SERVER_LOG;
@@ -40,23 +41,29 @@ public class DataCache {
     protected final ScoreboardCache scoreboardCache = new ScoreboardCache();
     protected final ConfigurationCache configurationCache = new ConfigurationCache();
     protected final CachedChunkSectionCountProvider sectionCountProvider = new CachedChunkSectionCountProvider();
+    protected final ClientInfoCache clientInfoCache = new ClientInfoCache();
 
     public Collection<CachedData> getAllData() {
-        return Arrays.asList(profileCache, playerCache, chunkCache, statsCache, tabListCache, bossBarCache, entityCache, chatCache, mapDataCache, recipeCache, teamCache, scoreboardCache);
+        // order is important, matches vanilla
+        return List.of(
+            profileCache, playerCache, chunkCache, statsCache, tabListCache, bossBarCache, entityCache,
+            chatCache, mapDataCache, recipeCache, teamCache, scoreboardCache, clientInfoCache
+        );
     }
 
-    // get a limited selection of cache data
-    // mainly we don't want to not send the proxy client's player cache
+    // limited selection of relevant cache data for spectators
+    // and replacing player cache with spectator's
     public Collection<CachedData> getAllDataSpectator(final PlayerCache spectatorPlayerCache) {
-        return Arrays.asList(spectatorPlayerCache, chunkCache, tabListCache, bossBarCache, entityCache, chatCache, mapDataCache, recipeCache, teamCache, scoreboardCache);
+        return List.of(
+            spectatorPlayerCache, chunkCache, tabListCache, bossBarCache, entityCache, chatCache,
+            mapDataCache, recipeCache, teamCache, scoreboardCache
+        );
     }
 
     public boolean reset(CacheResetType type) {
         CACHE_LOG.debug("Clearing cache using type: {}...", type.name().toLowerCase());
-
         try {
             this.getAllData().forEach(d -> d.reset(type));
-
             CACHE_LOG.debug("Cache cleared.");
         } catch (Exception e) {
             throw new RuntimeException("Unable to clear cache", e);
